--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,7 @@ a {
 
 .btn_large a {
     display: block;
+    width: max-content;
     padding: 0.5em 2em;
     border-radius: 1.5em;
 }
@@ -92,7 +93,7 @@ nav {
 .nav_li.btn a:hover {
     text-decoration: none;
     background-color: whitesmoke;
-    box-shadow: 2px 2px 3px;
+    box-shadow: 2px 2px 3px grey;
 }
 
 .nav_bars {
@@ -177,6 +178,7 @@ nav {
 
 .jumbo_info .btn_large a:hover {
     background-color: #2d9aff;
+    box-shadow: 2px 2px 3px grey;
 }
 
 .jumbo_img {
@@ -317,7 +319,7 @@ nav {
 /* testimonials */
 
 .testimonials_bg {
-    max-width: 1000px;
+    max-width: var(--max-width);
     margin-inline: auto;
     text-align: center;
     padding: 4rem 0rem 7rem;
@@ -327,20 +329,23 @@ nav {
     padding-inline: 1.5rem;
 }
 
-.testimonials_container h4 {
+.testimonials_container>h4 {
     font-size: 1.5rem;
     font-weight: 300;
     margin-bottom: 2rem;
 }
 
-.testimonials_container h2 {
+.testimonials_container>h2 {
     font-size: 2.5rem;
     margin-bottom: 2.5rem;
     color: var(--tropical-indigo);
 }
 
-.testimonials_container p {
+.testimonials_container>p {
+    max-width: 1000px;
+    margin-inline: auto;
     margin-bottom: 2.5rem;
+    color: var(--jet);
 }
 
 .card {
@@ -382,5 +387,85 @@ nav {
     .card_img {
         margin: 0 0 1rem;
         flex: 0 0 100%;
+    }
+}
+
+/* benefits */
+
+.benefits_bg {
+    padding: 4rem 0;
+    background-color: var(--tropical-indigo);
+}
+
+.benefits_container {
+    max-width: var(--max-width);
+    margin-inline: auto;
+    display: flex;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+    padding-inline: 1.5rem;
+}
+
+.benefits_container>h2 {
+    flex: 0 0 100%;
+    text-align: center;
+    font-size: 2.5rem;
+    margin-bottom: 2.5rem;
+    color: white
+}
+
+.benefit {
+    flex: 0 0 calc((100% - 3rem) / 3);
+    padding: 3rem 2rem 2rem;
+    border-radius: 2rem;
+    background-color: white;
+}
+
+.benefit>h4 {
+    font-size: 3rem;
+    font-weight: 900;
+    margin-bottom: 1.5rem;
+    color: var(--tropical-indigo);
+}
+
+.benefit>h3 {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+    color: var(--tropical-indigo);
+}
+
+.benefit>p {
+    color: var(--jet);
+    margin-bottom: 1.5rem;
+}
+
+.benefit .btn a {
+    width: max-content;
+    letter-spacing: 3px;
+    padding: 0.5em 2.5em;
+    background-color: var(--tropical-indigo);
+    color: white;
+}
+
+.benefit .btn a:hover {
+    background-color: #a8a4e2;
+    box-shadow: 2px 2px 3px grey;
+}
+
+@media (max-width: 810px) {
+    .benefit {
+        flex: 0 0 calc(50% - 0.75rem);
+    }
+}
+
+@media (max-width: 555px) {
+    .benefit {
+        flex: 0 0 100%;
+    }
+}
+
+@media (max-width: 375px) {
+    .benefits_container>h2 {
+        font-size: 2rem;
     }
 }
