--- a/assets/style.css
+++ b/assets/style.css
@@ -23,12 +23,6 @@ ol, ul {
     list-style: none;
 }
 
-.btn a {
-    display: block;
-    padding: 0.5em 1em;
-    border-radius: 1em;
-}
-
 p {
     line-height: 1.7;
 }
@@ -37,9 +31,18 @@ a {
     text-decoration: none;
 }
 
+.btn {
+    width: max-content;
+}
+
+.btn a {
+    display: block;
+    padding: 0.5em 1em;
+    border-radius: 1em;
+}
+
 .btn_large a {
     display: block;
-    width: max-content;
     padding: 0.5em 2em;
     border-radius: 1.5em;
 }
@@ -168,7 +171,6 @@ nav {
 }
 
 .jumbo_info .btn_large {
-    width: max-content;
     font-size: 20px;
 }
 
@@ -244,18 +246,21 @@ nav {
     flex: 0 0 calc(50% - 2rem);
 }
 
-.strategy .planning_img img {
-    width: 100%;
+.strategy .planning_img {
     margin-bottom: 12rem;
 }
 
-.strategy h2 {
+.strategy .planning_img img {
+    width: 100%;
+}
+
+.strategy>h2 {
     font-size: 2.2rem;
     margin-bottom: 4rem;
     color: white;
 }
 
-.strategy p {
+.strategy>p {
     color: white;
 }
 
@@ -269,21 +274,29 @@ nav {
     color: var(--jet);
 }
 
-.developement .planning_img img {
-    width: 80%;
+.developement .planning_img {
     margin-bottom: 1rem;
 }
 
-.developement h2 {
+.developement .planning_img img {
+    width: 80%;
+}
+
+.developement>h2 {
     font-size: 1.8rem;
     margin-bottom: 1.5rem;
 }
 
-.developement p {
+.developement>p {
     margin-bottom: 2rem;
 }
 
-.developement .icon i {
+.developement .icon a {
+    display: inline-block;
+    width: max-content;
+}
+
+.developement .icon i{
     font-size: 3rem;
     color: var(--tropical-indigo);
 }
@@ -301,6 +314,10 @@ nav {
         flex: 0 0 100%;
     }
 
+    .strategy .planning_img {
+        margin-bottom: 6rem;
+    }
+
     .strategy h2 {
         font-size: 3.5rem;
     }
@@ -312,7 +329,7 @@ nav {
         margin-bottom: 4rem;
     }
 
-    .strategy h2 {
+    .strategy>h2 {
         font-size: 2rem;
         margin-bottom: 2rem;
     }
@@ -442,7 +459,6 @@ nav {
 }
 
 .benefit .btn a {
-    width: max-content;
     letter-spacing: 3px;
     padding: 0.5em 2.5em;
     background-color: var(--tropical-indigo);
@@ -537,7 +553,6 @@ nav {
 }
 
 .profile>.btn a {
-    width: max-content;
     background-color: var(--tropical-indigo);
     color: white;
 }
@@ -570,5 +585,80 @@ nav {
 @media (max-width: 445px) {
     .profile {
         flex: 0 0 100%;
+    }
+}
+
+/* get started */
+
+.get_started_bg {
+    padding: 4rem 0;
+    background-color: var(--tropical-indigo);
+}
+
+.get_started_container {
+    max-width: 650px;
+    margin-inline: auto;
+    padding-inline: 1.5rem;
+    text-align: center;
+}
+
+.get_started_container>h4 {
+    font-size: 1.2em;
+    font-weight: 300;
+    margin-bottom: 1.5rem;
+    color: rgba(355, 355, 355, 0.8);
+}
+
+.get_started_container>h3 {
+    font-size: 2.8em;
+    margin-bottom: 2.5rem;
+    color: white;
+}
+
+.get_started_container>h2 {
+    font-size: 5em;
+    margin-bottom: 2rem;
+    color: var(--xanthous);
+}
+
+.get_started_container>p {
+    line-height: 1.8;
+    margin-bottom: 2rem;
+    color: whitesmoke;
+}
+
+.get_started_container .btn {
+    display: inline-block;
+    margin-bottom: 2rem;
+}
+
+.get_started_container .btn a {
+    font-size: 18px;
+    font-weight: 900;
+    padding: 1.5em 5em;
+    border-radius: 2em;
+    color: var(--tropical-indigo);
+}
+
+.get_started_container .btn a:hover {
+    background-color: whitesmoke;
+    box-shadow: 2px 2px 3px grey;
+}
+
+.get_started_container .copyright {
+    color: white;
+}
+
+.get_started_container .copyright a {
+    color: white;
+}
+
+.get_started_container .copyright a:hover {
+    text-decoration: underline;
+}
+
+@media (max-width: 460px) {
+    .get_started_container {
+        font-size: 12px;
     }
 }
